MAvila's First Commit

--- a/website/templates/first_heading.html
+++ b/website/templates/first_heading.html
@@ -1,2 +1,49 @@
 <!-- your html code here -->
 <p>Hello, I'm the first_heading.html</p>
+
+<!-- First Heading -->
+<div class="container mt-5">
+    <div class="row">
+
+        <!-- Left Text -->
+        <div class="col-8 p-3">
+            <div class="d-flex">
+                <h2 class="me-2">The First Heading</h2>
+                <h2 class="text-secondary"> Will Catch Your Eye</h2>
+            </div>
+            <p>Done ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis
+                euismod semper. Praesent commodo cursus magna, vel scelerisque nisl
+                consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+        </div>
+
+        <!-- Right Image -->
+        <div class="col-3">
+            <img class="rounded-circle" src="website/assets/img/1.jpg" alt="walter-white" width="300" height="300">
+        </div>
+
+    </div>
+</div>
+
+<!-- Second Heading -->
+<div class="container mt-5">
+    <div class="row">
+
+
+        <!-- Left Image -->
+        <div class="col-3">
+            <img class="rounded-circle" src="website/assets/img/2.jpg" alt="person texting away" width="300"
+                height="300">
+        </div>
+
+        <!-- Right Text -->
+        <div class="col-8 p-3">
+            <div class="d-flex">
+                <h2 class="me-2">The Second Heading</h2>
+                <h2 class="text-secondary"> Is Cool Too</h2>
+            </div>
+            <p>Done ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis
+                euismod semper. Praesent commodo cursus magna, vel scelerisque nisl
+                consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+        </div>
+    </div>
+</div>
