Finished portfolio and contact

--- a/website/templates/portfolio.html
+++ b/website/templates/portfolio.html
@@ -1,2 +1,46 @@
 <!-- your html code here -->
-<p>Brody</p>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <link rel="stylesheet" href="styles.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Portfolio</title>
+</head>
+
+<body>
+
+    <h2><b>Portfolio</b></h2>
+    <p>Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent
+      commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+      <div class="container text-left">
+        <div class="row">
+          <div class="col">
+            <img src="https://picsum.photos/id/870/700/400?grayscale&blur=2" alt="Snow" style="width:300px">
+            <h4><b class="text-primary">Project Name</b></h4>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pallentesque urna varius vitae.</p>
+          </div>
+          <div class="col">
+            <img src="https://picsum.photos/id/870/700/400?grayscale&blur=2" alt="Snow" style="width:300px">
+            <h4><b class="text-primary">Project Name</b></h4>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pallentesque urna varius vitae.</p>          </div>
+          <div class="col">
+            <img src="https://picsum.photos/id/870/700/400?grayscale&blur=2" alt="Snow" style="width:300px">
+            <h4><b class="text-primary">Project Name</b></h4>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pallentesque urna varius vitae.</p>          </div>
+        </div>
+      </div>
+    <!-- <div class="row">
+      <img src="https://picsum.photos/id/870/700/400?grayscale&blur=2" alt="Snow" style="width:400px">
+      <img src="https://picsum.photos/id/870/700/400?grayscale&blur=2" alt="Forest" style="width:400px">
+      <img src="https://picsum.photos/id/870/700/400?grayscale&blur=2" alt="Mountains" style="width:400px">
+    </div>
+    <div class="row">
+      <p>testing</p>
+      <p>testing</p>
+    </div> -->
+
+</body>
+
+</html>
