--- a/website/templates/contact.html
+++ b/website/templates/contact.html
@@ -1,19 +1,32 @@
-<!-- your html code here -->
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <div class="portfolio"></div>
-    <div class="card" style="width: 18rem;">
-        <img src="..." class="card-img-top" alt="...">
-        <div class="card-body">
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-        </div>
 
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Contact</title>
+</head>
+
+<body>
+  <h2><b>Contact</b></h2>
+  <p>Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent
+    commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+
+    <div class="d-flex align-items-center justify-content-center">
+    <div class="card bg-light" style="width: 75%">
+      <div class="mb-3 mt-3">
+        <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="Email address">
+    </div>
+      <div class="mb-3">
+
+        <textarea class="form-control" id="exampleFormControlTextarea1" rows="3" placeholder="Your message"></textarea>
       </div>
+      <div class="d-grid gap-2 d-md-flex justify-content-md-end">
+        <button class="btn btn-primary" type="button">Submit</button>
+      </div>
+    </div>
+  </div>
+
 </body>
+
 </html>
