Removed heading from index.html

--- a/website/templates/first_heading.html
+++ b/website/templates/first_heading.html
@@ -1,5 +1,5 @@
 <!-- your html code here -->
-<p>Hello, I'm the first_heading.html</p>
+<!-- <p>Hello, I'm the first_heading.html</p> -->
 
 <!-- First Heading -->
 <div class="container mt-5">
