--- a/website/templates/first_heading.html
+++ b/website/templates/first_heading.html
@@ -18,7 +18,7 @@
 
         <!-- Right Image -->
         <div class="col-3">
-            <img class="rounded-circle" src="website/assets/img/1.jpg" alt="walter-white" width="300" height="300">
+            <img class="rounded-circle" src="assets/img/1.jpg" alt="walter-white" width="300" height="300">
         </div>
 
     </div>
@@ -31,7 +31,7 @@
 
         <!-- Left Image -->
         <div class="col-3">
-            <img class="rounded-circle" src="website/assets/img/2.jpg" alt="person texting away" width="300"
+            <img class="rounded-circle" src="assets/img/2.jpg" alt="person texting away" width="300"
                 height="300">
         </div>
 
